--- a/app/views/layouts/modal_create.js.erb
+++ b/app/views/layouts/modal_create.js.erb
@@ -1,6 +1,8 @@
 $('.popup_content_visible').popup('hide');
 $('body').prepend(
-  $('<div class="Flash-message Flash-message--success">').html(
-    "<%= yield %>"
-  )
+  "<%=
+    j render 'layouts/partials/flash',
+             type: 'success',
+             content: yield
+  %>"
 );
