--- a/app/assets/stylesheets/modules/_flash-message.scss
+++ b/app/assets/stylesheets/modules/_flash-message.scss
@@ -10,6 +10,11 @@
 	line-height: 40px;
 	text-align: center;
 	color: $brand_white;
+
+	position: fixed;
+	top: 0;
+	z-index:99;
+	width: 100%;
 }
 
 .Flash-message--alert {
@@ -26,4 +31,11 @@
 
 .Flash-message--notice {
 	background: $brand_yellow;
+}
+
+.Flash-message__close {
+	position: absolute;
+	top: 13px;
+	right: 10px;
+	cursor: pointer;
 }
