--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -2,7 +2,7 @@ footer.footer-main
   section.footer-main__firstrow
     .wrapper-inner
       .footer-main__subscribe
-        = render 'subscriptions/shared/new', subscription: @subscription
+        = render 'subscriptions/shared/new', subscription: subscription
 
         .Social-media
           = link_to 'Google+',
