--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,17 +1,17 @@
 main.content-main.content-main--wide
   .wrapper-inner
     section.section-start.section-start--how
-      h4.section-start__headline Wie funktioniert Clarat?
+      h4.section-start__headline Wie funktioniert clarat?
       .section-start__body
         p Sämtliche Unterstützungsangebote für Kinder, Jugendliche und Familien in Deiner Nähe. Gib Dein Anliegen ein und finde das Angebot, das Dir wirklich weiter hilft. Wir sagen Dir auch noch, was Du tun musst, was Du als nächstes tun musst, um das Angebot zu nutzen.
 
     section.section-start.section-start--whom
-      h4.section-start__headline Für wen ist Clarat?
+      h4.section-start__headline Für wen ist clarat?
       .section-start__body
         p clarat ist für alle da. Vor allem für Familien, Jugendliche und Kinder auf der Suche nach Unterstützung. Aber auch für Menschen, die erkennen, dass ein anderer Mensch Hilfe braucht. Erzieher zum Beispiel. Oder Lehrer. Oder Ärzte. Anliegen eingeben, Angebot finden und dann hin.
 
 
     section.section-start.section-start--why
-      h4.section-start__headline Warum gibt es Clarat?
+      h4.section-start__headline Warum gibt es clarat?
       .section-start__body
         p In Deutschland gibt es viele Unterstützungsangebote für Kinder, Jugendliche und Familien. Allerdings sind diese selten leicht zu finden. Mit clarat helfen wir Dir, schnell und unkompliziert zum passenden Angebot in deiner Nähe zu kommen.
