--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -102,12 +102,11 @@
                 br
             /! http://microformats.org/wiki/adr end
 
-      section.section-content--map
-
-        .aside-standard__container
-          h5.aside-standard__headline Kartenausgabe
-          #map-container
-            #map-canvas data={ markers: '{"52.5071987700295,13.4224654888445":{"position":{"latitude":52.5071987700295,"longitude":13.4224654888445},"offer_ids":[5]}}', position: '{"latitude":52.5200066,"longitude":13.404954}' }
+        section.section-content--map
+          .aside-standard__container
+            h5.aside-standard__headline Kartenausgabe
+            #map-container
+              #map-canvas data={markers: @markers.to_json}
 
 
       - unless @offer.tags.empty?
