Preliminary add 'noindex'

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,7 +1,7 @@
 doctype html
 html class='no-js' lang=I18n.locale
   head
-    title Clarat
+    title clarat
     = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
     | <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
@@ -23,6 +23,8 @@ html class='no-js' lang=I18n.locale
     link rel="apple-touch-icon-precomposed" sizes="144x144" href=""
     meta name="msapplication-TileImage" content=""
     meta name="theme-color" content="#F4B528"
+    / ToDo: Remove before 'real' launch
+    meta name="robots" content="noindex"
 
     |     <!--[if lt IE 9]>
     |       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
