--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -1,3 +1,4 @@
+- provide(:title, @offer.name )
 .wrapper-inner class="#{'no-location' unless @location}"
   main.content-main.content-main--wide
     header.page-detail__header
