--- a/app/views/organizations/show.html.slim
+++ b/app/views/organizations/show.html.slim
@@ -1,3 +1,4 @@
+- provide(:title, @organization.name )
 - location = @organization.location
 .wrapper-inner class="#{'no-location' unless location}"
   main.content-main.content-main--wide
