--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,3 +1,4 @@
+- provide(:title, 'Unterstützungsangebote für Kinder, Jugendliche und Familien')
 main.content-main.content-main--wide
   .wrapper-inner
     section.section-start.section-start--how
