--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -16,11 +16,11 @@
 		top: 15px;
 		z-index: 20;
 		margin-top: 5px;
-		margin-left: 20px;
+		margin-left: 15px;
 		width: 91px;
 		height: 20px;
-		background-image: image-url('clarat-logo-white.png');
-		background-size: 91px 20px;
+		background-image: image-url('logo-c.svg');
+		background-size: 90px 20px;
 		background-repeat: no-repeat;
 	}
 
@@ -43,7 +43,8 @@
 		position: fixed;
 		right: 0;
 		left: 0;
-		z-index: 10;
+		z-index: 20;
+		background: transparent;
 
 		.template--pages-home &,
 		.template--pages-about & {
@@ -65,12 +66,11 @@
 		padding-bottom: 0;
 	}
 
-	// ToDo: Refactor
 	.Distributor--navigation {
 		.twitter-typeahead,
 		#search_form_search_location {
-			width: 60% !important;
-			margin-left: 24% !important;
+			margin-left: 24%;
+			width: 62%;
 		}
 	}
 
@@ -89,11 +89,12 @@
 
 		#search_form_search_location {
 			margin-top: 10px;
+			width: 62%;
 		}
 
 		.main-search__submit {
 			position: absolute;
-			right: 20px;
+			right: 15px;
 			height: 35px;
 			background-size: 60%;
 
@@ -147,8 +148,12 @@
 
 	// Content ######################################
 
+	.wrapper-inner {
+		padding: 0 15px;
+	}
+
 	.content-main {
-		padding-top: 105px;
+		padding-top: 71px;
 
 		.template--pages-home & {
 			padding-top: 0;
@@ -156,8 +161,8 @@
 	}
 
 	.section-start__headline {
-		font-size: 16px;
 		height: 35px;
+		font-size: 16px;
 		line-height: 37px;
 	}
 
@@ -177,6 +182,13 @@
 			font-size: 14px;
 			line-height: 24px;
 		}
+	}
+
+	.Listing-results__headline {
+		overflow: hidden;
+		max-width: 58%;
+		text-overflow: ellipsis;
+		font-size: 20px;
 	}
 
 	.template--pages-faq,
@@ -215,6 +227,8 @@
 	// Misc ######################################
 
 	.popup_content {
+		width: 80% !important; // override inline JS
+
 		.formtastic {
 			#update_request_email {
 				margin: 0;
@@ -245,13 +259,26 @@
 		}
 	}
 
+	#unavailable_location_overlay {
+		.formtastic {
+			#update_request_email {
+				max-width: 100%;
+			}
+		}
+	}
+
 	.jump-to-tags {
-		display: block;
-		width: 100%;
+		position: absolute;
+		top: 65px; // mobile header height
+		right: 0;
+		z-index: 10;
+		display: inline-block;
+		width: 40%;
+		height: 40px;
 		background: $brand_blue;
 		color: $brand_white;
 		text-align: center;
 		text-decoration: none;
-		line-height: 30px;
+		line-height: 40px;
 	}
 }
