--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,7 +20,9 @@ html class='no-js' lang=I18n.locale
     meta property="og:site_name" content=""
     meta property="og:image" content=""
 
-    link rel="Shortcut Icon" href="favico.ico" type="image/x-icon"
+    link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32"
+    link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16"
+
     link rel="apple-touch-icon-precomposed" sizes="144x144" href=""
     meta name="msapplication-TileImage" content=""
     meta name="theme-color" content="#F4B528"
