Add and rename agb

--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -36,6 +36,6 @@ footer.footer-main
           li.nav-legal__listitem
             = link_to 'Impressum', '/impressum'
           li.nav-legal__listitem
-            = link_to 'Nutzungsbedingungen', '/nutzungsbedingungen'
+            = link_to 'Rechtliche Hinweise', '/rechtliche-hinweise'
           li.nav-legal__listitem
             = link_to 'Datenschutzerklärung', '/datenschutzerklaerung'
