Basic implementation of #115

--- a/app/assets/stylesheets/navigation/_nav-sections.scss
+++ b/app/assets/stylesheets/navigation/_nav-sections.scss
@@ -76,7 +76,8 @@
 	background-size: 105px 105px;
 }
 
-.nav-sections__listitem--e-habitation {
-	background: image-url('picto_residing.svg') no-repeat center top;
+.nav-sections__listitem--e-habitation, // ToDo: Remove habitation icon reference
+.nav-sections__listitem--e-violence {
+	background: image-url('picto_violence.svg') no-repeat center top;
 	background-size: 105px 105px;
 }
