Add id for link, #71

--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -35,7 +35,7 @@
 
   aside.aside-standard
 
-    .aside-standard__container
+    #tags.aside-standard__container
       h5.aside-standard__headline Schlagwortfilter
 
       ul.Listing-tags
