Fix typeahead container width and borders

--- a/app/assets/stylesheets/mediaqueries/_xl.scss
+++ b/app/assets/stylesheets/mediaqueries/_xl.scss
@@ -53,6 +53,10 @@
 		margin-left: 10px;
 	}
 
+	span.tt-dropdown-menu { // override JS with specifity of selector and important
+		right: 0 !important;
+	}
+
 	.template--pages-home {
 		.twitter-typeahead,
 		#new_search_form #search_form_search_location {
