Implement #123, proper main icon modifier and output

--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -114,6 +114,19 @@
 		}
 	}
 
+	.template--offers-show {
+
+		.page-detail__title {
+			padding-right: 50px;
+		}
+
+		.page-detail__icon {
+			width: 40px;
+			height: 40px;
+			background-size: 40px 40px;
+		}
+	}
+
 	.aside-standard__container {
 		margin-top: 30px;
 		margin-bottom: 0;
