--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -267,6 +267,9 @@
 		}
 	}
 
+	// Misc ######################################
+
+	// Styling for JS-generated button
 	.jump-to-tags {
 		position: absolute;
 		top: 65px; // mobile header height
@@ -275,10 +278,21 @@
 		display: inline-block;
 		width: 40%;
 		height: 40px;
+		margin-right: 15px;
+		width: 36%;
+		height: 32px;
 		background: $brand_blue;
 		color: $brand_white;
 		text-align: center;
 		text-decoration: none;
 		line-height: 40px;
+		line-height: 32px;
+	}
+
+	// Creating offset for internal anchor jump
+	#tags:before {
+		content: "";
+		display: block;
+		height: 82px;
 	}
 }
