--- a/app/assets/stylesheets/mediaqueries/_xl.scss
+++ b/app/assets/stylesheets/mediaqueries/_xl.scss
@@ -90,6 +90,10 @@
 		// @TODO: smaller font for both headlines and paragraphs
 	}
 
+	// Misc ############################################
 
+	.jump-to-tags {
+		display: none;
+	}
 
 }
