--- a/app/assets/stylesheets/form/_base.scss
+++ b/app/assets/stylesheets/form/_base.scss
@@ -11,7 +11,7 @@ button {
 
 input,
 textarea {
-  @include input-placeholder($brand_brown, 400, null);
+  @include input-placeholder(rgba($brand_brown, .72), 400, null);
   @extend %roboto_light;
   background: $brand_beige;
 }
