--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -6,7 +6,7 @@
 
 @include breakpoint(M) {
 
-	//@include mqindicator('M');
+//	@include mqindicator('M');
 
 
 	// Header ######################################
@@ -60,6 +60,28 @@
 	#new_search_form {
 		padding-left: 10px;
 		width: 100%;
+
+		label.string {
+			left: 14px;
+		}
+
+		.template--pages-home & {
+
+			.input {
+				&.string {
+					display: block;
+					height: 50px;
+				}
+
+				&.search_form_search_location {
+					height: 50px;
+
+					label.string {
+						margin-top: 15px;
+					}
+				}
+			}
+		}
 	}
 
 	.twitter-typeahead,
