Solve Firefox float bug

--- a/app/assets/stylesheets/form/_main-search.scss
+++ b/app/assets/stylesheets/form/_main-search.scss
@@ -12,8 +12,11 @@
   list-style: none;
 
   .input {
-    position: relative;
-    display: inline;
+    &.string {
+      position: relative;
+      display: inline-block;
+      float: left;
+    }
   }
 
   label.string {
